load demo and cappun data

--- a/gss_cleaning.ipynb
+++ b/gss_cleaning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPkBJMsfB46f2ORVFubRZOs"
+      "authorship_tag": "ABX9TyP2VvotT4iXaecY/i208eNH"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,13 +17,25 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd"
+      ],
+      "metadata": {
+        "id": "k7edk0QDM5gI"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "TupwilS8kcXb",
-        "outputId": "c428e748-6bed-4036-eda2-362814f146f6"
+        "outputId": "07faf61e-1051-4e9b-a6ff-7be96d5538ba"
       },
       "outputs": [
         {
@@ -38,9 +50,6 @@
       ],
       "source": [
         "# load data\n",
-        "\n",
-        "import pandas as pd\n",
-        "#\n",
         "var_list = ['id',\n",
         "            'age',\n",
         "            'sex',\n",
@@ -98,12 +107,12 @@
         "df.head()"
       ],
       "metadata": {
-        "id": "ae78RXzJsRu4",
-        "outputId": "b76abdec-982c-49d8-fe98-0fe775b4148f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 487
-        }
+        },
+        "id": "ae78RXzJsRu4",
+        "outputId": "b76abdec-982c-49d8-fe98-0fe775b4148f"
       },
       "execution_count": 13,
       "outputs": [
@@ -509,11 +518,11 @@
         "df.shape"
       ],
       "metadata": {
-        "id": "_SBwQmYCxAFZ",
-        "outputId": "7f4c9ad7-1a68-4cdd-b23f-be1f84a76ade",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_SBwQmYCxAFZ",
+        "outputId": "7f4c9ad7-1a68-4cdd-b23f-be1f84a76ade"
       },
       "execution_count": 16,
       "outputs": [
@@ -535,11 +544,11 @@
         "df['cappun'].value_counts()"
       ],
       "metadata": {
-        "id": "ta-UrXACw4sN",
-        "outputId": "6aaacccb-df9d-4869-fd81-29ea46ee389f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ta-UrXACw4sN",
+        "outputId": "6aaacccb-df9d-4869-fd81-29ea46ee389f"
       },
       "execution_count": 14,
       "outputs": [
