--- a/gss_cleaning.ipynb
+++ b/gss_cleaning.ipynb
@@ -838,6 +838,17 @@
    "source": [
     "df['income'].value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! git add gss_cleaning.ipynb selected_gss_data.csv\n",
+    "! git commit -m \"cleaning work 1\"\n",
+    "! git push https://rvt9bx:<PAT>@github.com/<Username>/<Repo name>"
+   ]
   }
  ],
  "metadata": {
