income and religion cleaning

--- a/gss_cleaning.ipynb
+++ b/gss_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 1,
    "metadata": {
     "id": "k7edk0QDM5gI",
     "tags": []
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 127,
    "metadata": {
     "id": "hWsZ08pwsKmT",
     "tags": []
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 113,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -271,7 +271,7 @@
        "4     NaN  not harshly enough    NaN  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -308,7 +308,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 43,
    "metadata": {
     "tags": []
    },
@@ -420,7 +420,7 @@
        "48261  relig  fund  reliten  courts  cappun  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,19 +435,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 128,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "# drop duplicate rows \n",
-    "df = df.drop_duplicates(keep=False)"
+    "df = df.drop_duplicates(keep=False)\n",
+    "\n",
+    "# reset indices for future use\n",
+    "df = df.reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -463,7 +466,7 @@
        "(72390, 15)"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -522,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -541,7 +544,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 129,
    "metadata": {
     "tags": []
    },
@@ -563,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 46,
    "metadata": {
     "tags": []
    },
@@ -578,7 +581,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -618,7 +621,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 130,
    "metadata": {
     "tags": []
    },
@@ -640,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 48,
    "metadata": {
     "tags": []
    },
@@ -656,7 +659,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -707,7 +710,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 131,
    "metadata": {
     "tags": []
    },
@@ -729,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 50,
    "metadata": {
     "tags": []
    },
@@ -748,7 +751,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
@@ -783,7 +786,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 132,
    "metadata": {
     "tags": []
    },
@@ -805,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 52,
    "metadata": {
     "tags": []
    },
@@ -830,7 +833,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,14 +843,377 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Cleaning Religion Variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "relig = religious preference <br>\n",
+    "fund =  fundamentalism/ liberalism of respondents religion <br>\n",
+    "reliten = how strong is their religious preference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "relig\n",
+       "protestant                 40125\n",
+       "catholic                   17242\n",
+       "none                        9895\n",
+       "jewish                      1421\n",
+       "other                       1224\n",
+       "christian                   1000\n",
+       "buddhism                     272\n",
+       "muslim/islam                 201\n",
+       "orthodox-christian           176\n",
+       "inter-nondenominational      159\n",
+       "hinduism                     158\n",
+       "other eastern religions       44\n",
+       "native american               36\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['relig'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "reliten\n",
+       "no religion        12\n",
+       "strong              5\n",
+       "not very strong     5\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "relig_mask = df['relig'].isnull()\n",
+    "relig_null = df.loc[relig_mask, ['relig','fund','reliten']]\n",
+    "relig_null['fund'].value_counts() # two obs with relig = nan have fund = liberal\n",
+    "relig_null['reliten'].value_counts() # some obs with relig = nan have reliten = no religion, strong, or not very strong "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### impute some values of relig based on fund or reliten values "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>educ</th>\n",
+       "      <th>marital</th>\n",
+       "      <th>childs</th>\n",
+       "      <th>wrkstat</th>\n",
+       "      <th>income</th>\n",
+       "      <th>incom16</th>\n",
+       "      <th>partyid</th>\n",
+       "      <th>relig</th>\n",
+       "      <th>fund</th>\n",
+       "      <th>reliten</th>\n",
+       "      <th>courts</th>\n",
+       "      <th>cappun</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>70309</th>\n",
+       "      <td>1464</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>never married</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>working part time</td>\n",
+       "      <td>$15,000 to $19,999</td>\n",
+       "      <td>below average</td>\n",
+       "      <td>not very strong democrat</td>\n",
+       "      <td>other</td>\n",
+       "      <td>liberal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>about right</td>\n",
+       "      <td>no response</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70614</th>\n",
+       "      <td>1769</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>never married</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>working full time</td>\n",
+       "      <td>$25,000 or more</td>\n",
+       "      <td>below average</td>\n",
+       "      <td>other party</td>\n",
+       "      <td>other</td>\n",
+       "      <td>liberal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>too harshly</td>\n",
+       "      <td>favor</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         id   age     sex  educ        marital childs            wrkstat  \\\n",
+       "70309  1464  27.0  female  12.0  never married    2.0  working part time   \n",
+       "70614  1769  43.0    male  12.0  never married    5.0  working full time   \n",
+       "\n",
+       "                   income        incom16                   partyid  relig  \\\n",
+       "70309  $15,000 to $19,999  below average  not very strong democrat  other   \n",
+       "70614     $25,000 or more  below average               other party  other   \n",
+       "\n",
+       "          fund reliten       courts       cappun  \n",
+       "70309  liberal     NaN  about right  no response  \n",
+       "70614  liberal     NaN  too harshly        favor  "
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# set relig = other if fund = liberal\n",
+    "relig_null.loc[df['fund']=='liberal',:] # see they currently have relig = NaN \n",
+    "mask = (df['relig'].isnull()) & (df['fund']=='liberal') # conditions for row selection\n",
+    "df.loc[mask,'relig'] = 'other' # set relig value to other \n",
+    "df.iloc[[70309,70614],:] # check work based on index values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "relig\n",
+       "protestant                 40125\n",
+       "catholic                   17242\n",
+       "none                        9907\n",
+       "jewish                      1421\n",
+       "other                       1226\n",
+       "christian                   1000\n",
+       "buddhism                     272\n",
+       "muslim/islam                 201\n",
+       "orthodox-christian           176\n",
+       "inter-nondenominational      159\n",
+       "hinduism                     158\n",
+       "other eastern religions       44\n",
+       "native american               36\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# set relig = none if reliten = no religion\n",
+    "relig_null.loc[df['reliten']=='no religion',:] # see they currently have relig = NaN \n",
+    "mask = (df['relig'].isnull()) & (df['reliten']=='no religion') # conditions for row selection\n",
+    "df.loc[mask,'relig'] = 'none' # set relig value to other \n",
+    "df['relig'].value_counts() # check work based on increased 'none' value counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "relig\n",
+       "protestant                 40125\n",
+       "catholic                   17242\n",
+       "none                        9907\n",
+       "jewish                      1421\n",
+       "other                       1236\n",
+       "christian                   1000\n",
+       "buddhism                     272\n",
+       "muslim/islam                 201\n",
+       "orthodox-christian           176\n",
+       "inter-nondenominational      159\n",
+       "hinduism                     158\n",
+       "other eastern religions       44\n",
+       "native american               36\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# set relig = other if reliten = strong or not very strong \n",
+    "relig_null.loc[(df['reliten']=='strong') | (df['reliten']=='not very strong'),:] # see they currently have relig = NaN \n",
+    "mask = (df['relig'].isnull()) & ((df['reliten']=='strong') | (df['reliten']=='not very strong')) # conditions for row selection\n",
+    "df.loc[mask,'relig'] = 'other' # set relig value to other \n",
+    "df['relig'].value_counts() # check work based on increased 'other' value counts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### impute some values of fund based on relig "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fund\n",
+       "moderate          28283\n",
+       "fundamentalist    19798\n",
+       "no religion        9907\n",
+       "liberal            9705\n",
+       "no response        4697\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['fund'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "! git add gss_cleaning.ipynb selected_gss_data.csv\n",
-    "! git commit -m \"cleaning work 1\"\n",
-    "! git push https://rvt9bx:<PAT>@github.com/<Username>/<Repo name>"
+    "# set fund = no religion if relig = none \n",
+    "df.loc[(df['relig']=='none'),'fund'] = 'no religion'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# set all other nan fund values to 'no response'\n",
+    "df['fund'] = df['fund'].replace(np.nan, 'no response')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### reliten"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "reliten\n",
+       "not very strong           24298\n",
+       "strong                    23252\n",
+       "no religion                7629\n",
+       "somewhat strong (vol.)     5907\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['reliten'].value_counts()"
    ]
   }
  ],
