--- a/final_gss_paper.ipynb
+++ b/final_gss_paper.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNuzjUBqgby3FiaM7r5pTDo",
+      "authorship_tag": "ABX9TyOyjLqyqIpPszUPEfSN+z2I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -195,9 +195,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nRA6hCKZEpFL",
-        "outputId": "3de57b6c-773a-4545-f797-3f3f7e9211c6"
+        "outputId": "e2266795-de07-45a9-82d2-a7e55107b342"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,12 +205,12 @@
           "text": [
             "Cloning into 'DS3001project_gss'...\n",
             "warning: redirecting to https://github.com/rvt9bx/DS3001project_gss.git/\n",
-            "remote: Enumerating objects: 52, done.\u001b[K\n",
-            "remote: Counting objects: 100% (26/26), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (17/17), done.\u001b[K\n",
-            "remote: Total 52 (delta 21), reused 11 (delta 9), pack-reused 26\u001b[K\n",
-            "Receiving objects: 100% (52/52), 27.35 MiB | 18.01 MiB/s, done.\n",
-            "Resolving deltas: 100% (23/23), done.\n"
+            "remote: Enumerating objects: 67, done.\u001b[K\n",
+            "remote: Counting objects: 100% (39/39), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (30/30), done.\u001b[K\n",
+            "remote: Total 67 (delta 30), reused 9 (delta 9), pack-reused 28\u001b[K\n",
+            "Receiving objects: 100% (67/67), 27.67 MiB | 19.30 MiB/s, done.\n",
+            "Resolving deltas: 100% (32/32), done.\n"
           ]
         }
       ]
@@ -228,7 +228,7 @@
       "metadata": {
         "id": "GsTrByKfEaJs"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -251,9 +251,9 @@
           "height": 399
         },
         "id": "TFy8MoTOFKDQ",
-        "outputId": "e80404b1-5a69-4216-f804-37ab50e1e822"
+        "outputId": "aba5b2ce-31b8-408b-a748-6d4febfaa1ff"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -289,7 +289,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-76e9b28c-14d5-4e6c-9eb0-7cb9f46fdcc2\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-7875da99-bdb3-4021-b868-d35f5860b41f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -428,7 +428,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-76e9b28c-14d5-4e6c-9eb0-7cb9f46fdcc2')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7875da99-bdb3-4021-b868-d35f5860b41f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -480,12 +480,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-76e9b28c-14d5-4e6c-9eb0-7cb9f46fdcc2 button.colab-df-convert');\n",
+              "        document.querySelector('#df-7875da99-bdb3-4021-b868-d35f5860b41f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-76e9b28c-14d5-4e6c-9eb0-7cb9f46fdcc2');\n",
+              "        const element = document.querySelector('#df-7875da99-bdb3-4021-b868-d35f5860b41f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -505,8 +505,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-1e2aea87-5ca9-414d-849e-fc2aafe68cad\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1e2aea87-5ca9-414d-849e-fc2aafe68cad')\"\n",
+              "<div id=\"df-7c458139-02fb-4e46-bb68-8aad92972adf\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7c458139-02fb-4e46-bb68-8aad92972adf')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -625,7 +625,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-1e2aea87-5ca9-414d-849e-fc2aafe68cad button');\n",
+              "        document.querySelector('#df-7c458139-02fb-4e46-bb68-8aad92972adf button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -641,7 +641,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 3
         }
       ]
     },
@@ -682,9 +682,9 @@
           "height": 944
         },
         "id": "toN_yzA1FVMo",
-        "outputId": "182ef269-ae4a-439d-c2b4-1ba9a5547f73"
+        "outputId": "d2a0f054-e4a6-4dd1-c579-28de40056e28"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -704,7 +704,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 4
         },
         {
           "output_type": "display_data",
@@ -754,9 +754,9 @@
           "height": 927
         },
         "id": "uIyfrOegHltT",
-        "outputId": "cea05b8c-b47d-4087-c6e2-5e6a33307f95"
+        "outputId": "1d580bb0-f3ea-4dfa-be67-22f4b9c19a06"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -793,7 +793,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Interestingly, it seems that differing income levels have almost no effect on the views of capital punishment and the court system. Regardless of the income level, all of the different income brackets have very similar proportions of responses. In fact, the far below bracket and far above bracket are almost identical.\n",
+        "This data is based off of the INCOM16 variable. Interestingly, it seems that differing income levels have almost no effect on the views of capital punishment and the court system. Regardless of the income level, all of the different income brackets have very similar proportions of responses. In fact, the far below bracket and far above bracket are almost identical.\n",
         "\n",
         "The one difference between groups are people who lived in an institution: their opinions on the court system are extremely more skewed towards not being harsh enough, and almost no one from that group believed that the court system's harshness was about right or too harsh. As far as capital punishment, the group that lived in institution had a 100% no response rate to the views on capital punishment."
       ],
@@ -805,7 +805,12 @@
       "cell_type": "code",
       "source": [
         "plt.figure(figsize=(14, 7))\n",
+        "# makes a dataframe of the counts for incom16 and cappun\n",
+        "# source: https://stackoverflow.com/questions/67410624/pandas-count-and-store-values-with-2-variables-columns\n",
         "counts = df.groupby(['incom16', 'cappun'], as_index=False).size()\n",
+        "# print(counts)\n",
+        "# finds the proportion of responses for each income level\n",
+        "# source: https://stackoverflow.com/questions/63172220/create-proportion-with-group-by-on-pandas-dataframe-by-two-columns\n",
         "s = counts.groupby('incom16')['size'].transform('sum')\n",
         "counts['proportion'] = counts['size'].div(s)\n",
         "plt.title(\"Proportion of Capital Punishment Opinions by Income Level\")\n",
@@ -824,9 +829,9 @@
           "height": 1000
         },
         "id": "BtWM6ZsdJDvF",
-        "outputId": "5398799e-6f0c-43e1-8712-36f8e13cf577"
+        "outputId": "286d44e4-c099-4c86-d031-c9551e24262f"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -836,7 +841,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 6
         },
         {
           "output_type": "display_data",
@@ -910,9 +915,9 @@
           "height": 1000
         },
         "id": "XD0Mgy4BRywZ",
-        "outputId": "c429741f-a7fd-4982-889d-b264e554910e"
+        "outputId": "9ec5dd1b-aa8c-449c-a1ee-686ed995ec98"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -922,7 +927,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 7
         },
         {
           "output_type": "display_data",
@@ -991,9 +996,9 @@
           "height": 1000
         },
         "id": "-ffohU8DTeOe",
-        "outputId": "3632889b-094b-4a1a-fc07-517a4f82a1c9"
+        "outputId": "085dc311-7938-41bc-e5aa-727f5cd35a8a"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1003,7 +1008,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 8
         },
         {
           "output_type": "display_data",
@@ -1144,7 +1149,7 @@
       "metadata": {
         "id": "Ja_jHTYUnJga"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     }
   ]
