age cleaning update

--- a/final_gss_paper.ipynb
+++ b/final_gss_paper.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyOyjLqyqIpPszUPEfSN+z2I",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/rvt9bx/DS3001project_gss/blob/main/final_gss_paper.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -158,7 +146,7 @@
         "AGE:\n",
         "*****\n",
         "\n",
-        "Age was surveyed as the respondant's age. Responses included 10-19, 20-29, 30-39, 40-49, 50-59, 60-69, 70-79, 80 or over, or nan (no answer). This variable was converted into a numeric variable and the nans were not changed (didn't want to take away the data)."
+        "Age was surveyed as the respondant's age. Responses were the numeric, integer value of the respondant's age or nan (no answer). This variable was converted from an object into a numeric variable and the nans were not changed (didn't want to take away the data)."
       ],
       "metadata": {
         "id": "XIm6Nd2i-lqQ"
@@ -197,7 +185,7 @@
         "id": "nRA6hCKZEpFL",
         "outputId": "e2266795-de07-45a9-82d2-a7e55107b342"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,7 +216,7 @@
       "metadata": {
         "id": "GsTrByKfEaJs"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -253,7 +241,7 @@
         "id": "TFy8MoTOFKDQ",
         "outputId": "aba5b2ce-31b8-408b-a748-6d4febfaa1ff"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -684,7 +672,7 @@
         "id": "toN_yzA1FVMo",
         "outputId": "d2a0f054-e4a6-4dd1-c579-28de40056e28"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -756,7 +744,7 @@
         "id": "uIyfrOegHltT",
         "outputId": "1d580bb0-f3ea-4dfa-be67-22f4b9c19a06"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -831,7 +819,7 @@
         "id": "BtWM6ZsdJDvF",
         "outputId": "286d44e4-c099-4c86-d031-c9551e24262f"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -917,7 +905,7 @@
         "id": "XD0Mgy4BRywZ",
         "outputId": "9ec5dd1b-aa8c-449c-a1ee-686ed995ec98"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -998,7 +986,7 @@
         "id": "-ffohU8DTeOe",
         "outputId": "085dc311-7938-41bc-e5aa-727f5cd35a8a"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1149,7 +1137,7 @@
       "metadata": {
         "id": "Ja_jHTYUnJga"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     }
   ]
